# ffmpeg-gui

./: .gitignore  README.md  design.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: release-windows.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
