[package]
name = "ffmpeg-gui"
version = "0.1.0"
description = "FFmpeg GUI"
edition = "2021"

[lib]
name = "ffmpeg_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.9.1", features = [] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
